--- a/index.html
+++ b/index.html
@@ -55,9 +55,12 @@
                     <img src="images/about-pic.svg" alt="">
                 </div>
                 <div class="column right">
-                    <p>Information technology student I am interested in the field of web development and am seeking to
-                        become a full-stack web developer. Here I will present my journey of experiences, skills and
-                        projects that I will be working on.</p>
+                    <p>Dedicated and Energetic Information Technology Graduate Interested in various technical areas
+                        such as business analysis and its tools to achieve the greatest possible benefit, I seek to
+                        apply what I have learned and implementing knowledge to find solutions to common and specialized
+                        issues in the work environment. Seeking a challenging position within an organization that can
+                        fully utilize my skills and knowledge of Information Technology techniques to achieve its goals.
+                    </p>
                     <a href="#about">Download CV</a>
                 </div>
             </div>
@@ -77,26 +80,27 @@
                         <p class="grid_skills_items my_skills">HTML</p>
                         <p class="grid_skills_items my_skills ">CSS</p>
                         <p class="grid_skills_items my_skills">Java Script</p>
-                        <p class="grid_skills_items ">Bootstap</p>
+                        <p class="grid_skills_items my_skills">Bootstap</p>
                         <p class="grid_skills_items ">React JS</p>
                     </div>
 
                     <div class="back-end-slills">
                         <h3>Back-End</h3>
-                        <p class="grid_skills_items ">PHP</p>
+                        <p class="grid_skills_items my_skills">PHP</p>
+                        <p class="grid_skills_items my_skills">Laravel</p>
+                        <p class="grid_skills_items my_skills">mySQL</p>
                         <p class="grid_skills_items ">Node.js</p>
-                        <p class="grid_skills_items ">mySQL</p>
                         <p class="grid_skills_items ">MongoDB</p>
                     </div>
 
                     <div class="design-slills">
                         <h3>Design</h3>
-                        <p class="grid_skills_items">Figma</p>
+                        <p class="grid_skills_items my_skills">Figma</p>
                     </div>
 
                     <div class="control-version-slills">
                         <h3>control version system</h3>
-                        <p class="grid_skills_items">Git & GitHup</p>
+                        <p class="grid_skills_items my_skills">Git & GitHup</p>
                     </div>
 
                 </div>
@@ -120,10 +124,13 @@
                 </div>
                 <div class="card">
                     <div class="box">
-                        <i class="fas fa-code"></i>
-                        <div class="text">Soon!!!</div>
-                        <p>I'm working on it</p>
-                        <a href="#projects">View project</a>
+                        <!-- <i class="fas fa-code"></i> -->
+                        <p>senior project</p>
+                        <img src="images/graduated project.jpg" alt="">
+                        <div class="text">Ta'aziz Platform</div>
+                        <p>he project aims to link 3 parties, Faculty of Law represented by the Alumni Unit, graduate
+                            students, and employers.</p>
+                        <a href="#">View project</a>
                     </div>
                 </div>
             </div>
@@ -294,12 +301,13 @@
                                 </div>
                             </div>
                         </div> -->
-                        <div class="row">
+                        <!-- <div class="row">
                             <i class="fab fa-linkedin"></i>
                             <div class="info">
-                                <div class="head"><a href="https://www.linkedin.com/in/iAbdullah-Alqarni">Linkedin</a></div>
+                                <div class="head"><a href="https://www.linkedin.com/in/iAbdullah-Alqarni">Linkedin</a>
+                                </div>
                             </div>
-                        </div>
+                        </div> -->
                         <div class="row">
                             <i class="fab fa-github"></i>
                             <div class="info">
