--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
                         issues in the work environment. Seeking a challenging position within an organization that can
                         fully utilize my skills and knowledge of Information Technology techniques to achieve its goals.
                     </p>
-                    <a href="#about">Download CV</a>
+                    <a href="https://drive.google.com/file/d/1QJtx3FPbhAlnoIXKAm7W4NXtb3ljCATn/view?usp=sharing">Download
+                        CV</a>
                 </div>
             </div>
         </div>
