--- a/index.html
+++ b/index.html
@@ -55,11 +55,14 @@
                     <img src="images/about-pic.svg" alt="">
                 </div>
                 <div class="column right">
-                    <p>Dedicated and Energetic Information Technology Graduate Interested in various technical areas
-                        such as business analysis and its tools to achieve the greatest possible benefit, I seek to
-                        apply what I have learned and implementing knowledge to find solutions to common and specialized
-                        issues in the work environment. Seeking a challenging position within an organization that can
-                        fully utilize my skills and knowledge of Information Technology techniques to achieve its goals.
+                    <p>
+                        Dedicated and Energetic Information Technology Graduate Interested in
+                        various technical areas such as Web development, data analysis, business
+                        analysis, network engineering. I seek to apply what I have learned to find
+                        solutions to common and specialized issues in the work environment.
+                        Seeking a challenging position within an organization that can fully utilize
+                        my skills and knowledge of Information Technology techniques to achieve
+                        its goals.
                     </p>
                     <a href="https://drive.google.com/file/d/1QJtx3FPbhAlnoIXKAm7W4NXtb3ljCATn/view?usp=sharing">Download
                         CV</a>
